// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App component should match with snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="loading"
      />
      <div
        class="auth"
      >
        <img
          alt="Auth"
          class="auth__image"
          src="login.png"
        />
        <form
          class="form"
        >
          <h3
            class="form__heading"
          >
            Login
          </h3>
          <div
            class="form__container"
          >
            <div
              class="form-field"
            >
              <label
                class="form-field__label required"
                for=":r0:"
              >
                User
              </label>
              <div
                class="form-field__control"
              >
                <input
                  class="input-field"
                  id=":r0:"
                  name="user"
                  placeholder="Input your user"
                  type="text"
                />
              </div>
              <div
                class="form-field__message"
              />
            </div>
            <div
              class="form-field"
            >
              <label
                class="form-field__label required"
                for=":r1:"
              >
                Password
              </label>
              <div
                class="form-field__control"
              >
                <input
                  class="input-field"
                  id=":r1:"
                  name="password"
                  placeholder="Input your password"
                  type="password"
                />
              </div>
              <div
                class="form-field__message"
              />
            </div>
            <button
              class="btn contained primary"
              type="submit"
            >
              Submit
            </button>
          </div>
        </form>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="loading"
    />
    <div
      class="auth"
    >
      <img
        alt="Auth"
        class="auth__image"
        src="login.png"
      />
      <form
        class="form"
      >
        <h3
          class="form__heading"
        >
          Login
        </h3>
        <div
          class="form__container"
        >
          <div
            class="form-field"
          >
            <label
              class="form-field__label required"
              for=":r0:"
            >
              User
            </label>
            <div
              class="form-field__control"
            >
              <input
                class="input-field"
                id=":r0:"
                name="user"
                placeholder="Input your user"
                type="text"
              />
            </div>
            <div
              class="form-field__message"
            />
          </div>
          <div
            class="form-field"
          >
            <label
              class="form-field__label required"
              for=":r1:"
            >
              Password
            </label>
            <div
              class="form-field__control"
            >
              <input
                class="input-field"
                id=":r1:"
                name="password"
                placeholder="Input your password"
                type="password"
              />
            </div>
            <div
              class="form-field__message"
            />
          </div>
          <button
            class="btn contained primary"
            type="submit"
          >
            Submit
          </button>
        </div>
      </form>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`App component should show login page 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="loading"
      />
      <div
        class="auth"
      >
        <img
          alt="Auth"
          class="auth__image"
          src="login.png"
        />
        <form
          class="form"
        >
          <h3
            class="form__heading"
          >
            Login
          </h3>
          <div
            class="form__container"
          >
            <div
              class="form-field"
            >
              <label
                class="form-field__label required"
                for=":r2:"
              >
                User
              </label>
              <div
                class="form-field__control"
              >
                <input
                  class="input-field"
                  id=":r2:"
                  name="user"
                  placeholder="Input your user"
                  type="text"
                />
              </div>
              <div
                class="form-field__message"
              />
            </div>
            <div
              class="form-field"
            >
              <label
                class="form-field__label required"
                for=":r3:"
              >
                Password
              </label>
              <div
                class="form-field__control"
              >
                <input
                  class="input-field"
                  id=":r3:"
                  name="password"
                  placeholder="Input your password"
                  type="password"
                />
              </div>
              <div
                class="form-field__message"
              />
            </div>
            <button
              class="btn contained primary"
              type="submit"
            >
              Submit
            </button>
          </div>
        </form>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="loading"
    />
    <div
      class="auth"
    >
      <img
        alt="Auth"
        class="auth__image"
        src="login.png"
      />
      <form
        class="form"
      >
        <h3
          class="form__heading"
        >
          Login
        </h3>
        <div
          class="form__container"
        >
          <div
            class="form-field"
          >
            <label
              class="form-field__label required"
              for=":r2:"
            >
              User
            </label>
            <div
              class="form-field__control"
            >
              <input
                class="input-field"
                id=":r2:"
                name="user"
                placeholder="Input your user"
                type="text"
              />
            </div>
            <div
              class="form-field__message"
            />
          </div>
          <div
            class="form-field"
          >
            <label
              class="form-field__label required"
              for=":r3:"
            >
              Password
            </label>
            <div
              class="form-field__control"
            >
              <input
                class="input-field"
                id=":r3:"
                name="password"
                placeholder="Input your password"
                type="password"
              />
            </div>
            <div
              class="form-field__message"
            />
          </div>
          <button
            class="btn contained primary"
            type="submit"
          >
            Submit
          </button>
        </div>
      </form>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
